--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ex1/1.7/1.7
 ex1/1.8/1.8
 ex1/1.9/1.9
 ch1/fetchall/fetchall
+ex1/1.6_lissajous/1.6_lissajous
+ex1/1.12_lissajous_server/1.12_lissajous_server
