--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ex1/1.9/1.9
 ch1/fetchall/fetchall
 ex1/1.6_lissajous/1.6_lissajous
 ex1/1.12_lissajous_server/1.12_lissajous_server
+ex1/1.7_fetch/1.7_fetch
