--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ ex1/1.6_lissajous/1.6_lissajous
 ex1/1.12_lissajous_server/1.12_lissajous_server
 ex1/1.7_fetch/1.7_fetch
 ch2/cf/cf
+.vscode/settings.json
