--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ ex1/1.12_lissajous_server/1.12_lissajous_server
 ex1/1.7_fetch/1.7_fetch
 ch2/cf/cf
 
+ch3/mandelbrot/mandelbrot
+ch3/surface/surface
